--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@prisma/client": "4.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "csv-parser": "^3.0.0",
