--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+  "version": 2,
+  "builds": [{ "src": "app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/discs", "methods": ["GET", "POST"], "dest": "app.js" }]
 }
