--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "fastify": "^4.15.0",
     "fastify-plugin": "^4.5.0",
+    "fastify-swagger": "^5.2.0",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0",
     "vercel": "^28.20.0"
