--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/swagger": "^8.3.1",
     "@prisma/client": "4.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fastify": "^4.15.0",
     "fastify-plugin": "^4.5.0",
-    "fastify-swagger": "^5.2.0",
     "nodemon": "^2.0.22",
     "uuid": "^9.0.0",
     "vercel": "^28.20.0"
