--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/swagger": "^8.3.1",
+    "@fastify/swagger-ui": "^1.8.0",
     "@prisma/client": "4.13.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
